--- a/src/lazutkina_a_a.CG2021/MainForm.form
+++ b/src/lazutkina_a_a.CG2021/MainForm.form
@@ -51,14 +51,14 @@
                   <text value="1"/>
                 </properties>
               </component>
-              <component id="4d9ed" class="javax.swing.JTextField" binding="frictionField">
+              <component id="4d9ed" class="javax.swing.JTextField" binding="yField">
                 <constraints>
                   <grid row="2" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="0.1"/>
+                  <text value="5"/>
                 </properties>
               </component>
               <component id="bb112" class="javax.swing.JLabel">
@@ -77,12 +77,12 @@
                   <text value="Weight"/>
                 </properties>
               </component>
-              <component id="6213e" class="javax.swing.JLabel">
+              <component id="6213e" class="javax.swing.JLabel" binding="yLabel">
                 <constraints>
                   <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="friction"/>
+                  <text value="Y"/>
                 </properties>
               </component>
               <component id="f0b93" class="javax.swing.JButton" binding="buttonApply">
@@ -125,7 +125,7 @@
                   <text value="Create"/>
                 </properties>
               </component>
-              <component id="f5876" class="javax.swing.JLabel">
+              <component id="f5876" class="javax.swing.JLabel" binding="fileStatusLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -151,22 +151,22 @@
                   <text value="1"/>
                 </properties>
               </component>
-              <component id="e5200" class="javax.swing.JLabel">
+              <component id="e5200" class="javax.swing.JLabel" binding="xLabel">
                 <constraints>
                   <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="g"/>
+                  <text value="X"/>
                 </properties>
               </component>
-              <component id="36007" class="javax.swing.JTextField" binding="gravityField">
+              <component id="36007" class="javax.swing.JTextField" binding="xField">
                 <constraints>
                   <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="9.8"/>
+                  <text value="5"/>
                 </properties>
               </component>
             </children>
